tests/fixtures/errors/undefined_function.ore
fn main
  result := bogus(42)
  print result
